syntax = "proto3";
option go_package = ".;pb";
import "user/user_db.proto";

//登录请求
message UserSginReq{
    SginTyoe stype = 1;                 //@go_tags(`json:"stype" example:"0" description:"登录方式“`) 登录方式
    string account = 2;                 //@go_tags(`json:"account" example:"" description:"账号"`) 账号
    string password = 3;                //@go_tags(`json:"password" example:"" description:"密码"`) 密码
    string mail = 4;                   //@go_tags(`json:"mail" example:"" description:"邮箱地址"`) 邮箱地址
    string phone = 5;                   //@go_tags(`json:"phone" example:"" description:"手机号码“`) 手机号
    string ttoken = 6;                  //@go_tags(`json:"ttoken" example:"" description:"第三方token"`) 第三方token    
    string vcode = 7;                   //@go_tags(`json:"vcode" example:"" description:"验证码"`) 验证码   
    string name = 10;                   //@go_tags(`gorm:"name:50" json:"name" example:"" description:"用户名"`) 用户名
    string avatar = 11;                 //@go_tags(`gorm:"avatar" json:"avatar" example:"" description:"头像连接"`) 头像连接
    string language = 12;               //@go_tags(`json:"language" example:"en" description:"语言"`) 
}

message UserSginResp {
    string token = 1;                   //@go_tags(`json:"token" example:"认证token" description:"认证token"`)
    DBUser user = 2;                    //@go_tags(`json:"user" description:"用户信息"`)
}

//获取用户股票信息请求
message UserGetStocksReq {
    
}

message UserGetStocksResp {
    repeated DBUserStock stocks = 1;   //@go_tags(`json:"stocks" description:"用户股票信息"`) 用户股票信息
}

//添加用户股票信息请求
message UserAddStockReq {
    DBUserStock stock = 1;              //@go_tags(`json:"stock" description:"用户股票信息"`) 用户股票信息
}

message UserAddStockResp {
    DBUserStock stock = 1;              //@go_tags(`json:"stock" description:"用户股票信息"`) 用户股票信息
}
 
//删除用户股票信息请求
message UserDelStockReq {
    repeated string stockid = 2;                 //@go_tags(`json:"stockid" example:"" description:"股票ID"`) 股票ID
}

message UserDelStockResp {

}
